# terraform-sandbox

./: .gitattributes  .tflint.hcl  .tfsec.yml  main.tf  makefile  pre-commit-config.yaml
.github/workflows/: main.yml
.terraform/: terraform.tfstate
.terraform/modules/: modules.json
apollo-k8s-task/: Dockerfile  makefile  pyproject.toml  sample_task.py
apollo-k8s-task/k8s/: deployment.yaml
apollo-k8s-task/terraform/: main.tf  output.tf  provider.tf  variables.tf
create-app/: Dockerfile  eks.tf  mian.tf  output.tf  var.tf  vpc.tf
create-app/k8s/: deployment.yaml  services.yaml
create-app/task/: README.md  pyproject.toml  setup.cfg
create-app/task/apollo_k8s_task.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
create-app/task/logs/: 2025-04-23T18-21-15+01-00_read-file_4QWnnCgJ6p4rJaBbAeZ6UK.eval
london_map_app/: app.py  london_map_app.py  requirements.txt  run.sh
project/: .terraform.lock.hcl  backend.tf  buildspec.yml  codepipeline_policy.json  main.tf  outputs.tf  variables.tf
project/.terraform/: terraform.tfstate
project/.terraform/modules/: modules.json
project/modules/ec2/: main.tf  variables.tf
project/modules/rds/: main.tf  varibles.tf
project/modules/s3/: main.tf
project/modules/vpc/: main.tf  output.tf
test/: backend.tf  candidate.md  lorem_lpsum.txt  main.tf  provider.tf  q1.py  q2.py  q3.py  q4.py  variables.tf
